feat(profile): add paypal email field

--- a/frontend/src/i18n/de.json
+++ b/frontend/src/i18n/de.json
@@ -10,6 +10,7 @@
     "birthDate": "Geburtsdatum",
     "address": "Adresse",
     "phone": "Telefonnummer",
+    "paypalEmail": "PayPal E-Mail",
     "language": "Sprache",
     "nationality": "Nationalit\u00e4t",
     "gender": "Geschlecht",
